Navigation View controller
mainstoryboard added base view (stage2) for yelp

--- a/popTravel/Base.lproj/Main.storyboard
+++ b/popTravel/Base.lproj/Main.storyboard
@@ -480,7 +480,115 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Oqs-hw-K1M" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1380" y="80"/>
+            <point key="canvasLocation" x="-831" y="2087"/>
+        </scene>
+        <!--Restaurants-->
+        <scene sceneID="nTs-re-TuF">
+            <objects>
+                <tableViewController id="keO-a3-2p6" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ryt-bh-SZQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RestaurantsCell" rowHeight="241" id="g4Q-0Y-PTw">
+                                <rect key="frame" x="0.0" y="28" width="375" height="241"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g4Q-0Y-PTw" id="lpk-nL-YS7">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="240.66666666666666"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xht-0e-xXc">
+                                            <rect key="frame" x="16" y="11" width="343" height="219"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="xR0-Qw-Okh">
+                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="219"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="100" translatesAutoresizingMaskIntoConstraints="NO" id="crz-8t-gKG">
+                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="179"/>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="a5T-C0-Xe3">
+                                                            <rect key="frame" x="0.0" y="195" width="343" height="24"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="100" verticalHuggingPriority="251" text="chicken &amp; rice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4c6-at-Ta7">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="260.66666666666669" height="24"/>
+                                                                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="18"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="wQ3-By-NZY">
+                                                                    <rect key="frame" x="276.66666666666669" y="0.0" width="66.333333333333314" height="24"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LaN-58-ulA">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="26.333333333333332" height="24"/>
+                                                                            <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="18"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ASD-ZS-a9R">
+                                                                            <rect key="frame" x="42.333333333333314" y="0.0" width="24" height="24"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" constant="24" id="95Y-Wj-nyv"/>
+                                                                                <constraint firstAttribute="height" constant="24" id="tL9-PP-PA4"/>
+                                                                            </constraints>
+                                                                        </imageView>
+                                                                    </subviews>
+                                                                </stackView>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="xR0-Qw-Okh" firstAttribute="leading" secondItem="xht-0e-xXc" secondAttribute="leading" id="Ben-LV-XVa"/>
+                                                <constraint firstAttribute="trailing" secondItem="xR0-Qw-Okh" secondAttribute="trailing" id="RX1-oQ-Y67"/>
+                                                <constraint firstItem="xR0-Qw-Okh" firstAttribute="top" secondItem="xht-0e-xXc" secondAttribute="top" id="Y6L-UT-9sM"/>
+                                                <constraint firstAttribute="bottom" secondItem="xR0-Qw-Okh" secondAttribute="bottom" id="mCv-Gl-xbt"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="xht-0e-xXc" firstAttribute="top" secondItem="lpk-nL-YS7" secondAttribute="topMargin" id="5CA-4d-xWz"/>
+                                        <constraint firstItem="xht-0e-xXc" firstAttribute="bottom" secondItem="lpk-nL-YS7" secondAttribute="bottomMargin" id="NB2-q0-30u"/>
+                                        <constraint firstItem="xht-0e-xXc" firstAttribute="leading" secondItem="lpk-nL-YS7" secondAttribute="leadingMargin" id="SnV-OD-ZAU"/>
+                                        <constraint firstItem="xht-0e-xXc" firstAttribute="trailing" secondItem="lpk-nL-YS7" secondAttribute="trailingMargin" id="aZa-b7-R5T"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="keO-a3-2p6" id="5pO-8a-1LQ"/>
+                            <outlet property="delegate" destination="keO-a3-2p6" id="17E-Kg-Gip"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Restaurants" id="AJ1-k5-uDu"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="do0-xN-0PS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1996" y="2086.6995073891626"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rgp-ns-QAC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M3B-9a-boB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="yJd-d5-kD3">
+                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="35"/>
+                            <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="keO-a3-2p6" kind="relationship" relationship="rootViewController" id="CEA-Y9-Nw9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zg3-Tj-HdZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1053.5999999999999" y="2086.6995073891626"/>
         </scene>
     </scenes>
     <resources>
