--- a/popTravel/Base.lproj/Main.storyboard
+++ b/popTravel/Base.lproj/Main.storyboard
@@ -517,14 +517,14 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="xR0-Qw-Okh">
                                                     <rect key="frame" x="0.0" y="0.0" width="343" height="219"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="100" translatesAutoresizingMaskIntoConstraints="NO" id="crz-8t-gKG">
-                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="179"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="100" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="crz-8t-gKG">
+                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="153"/>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="a5T-C0-Xe3">
-                                                            <rect key="frame" x="0.0" y="195" width="343" height="24"/>
+                                                            <rect key="frame" x="0.0" y="169" width="343" height="50"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="100" verticalHuggingPriority="251" text="chicken &amp; rice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4c6-at-Ta7">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="260.66666666666669" height="24"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="260.66666666666669" height="24.666666666666668"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="18"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -538,7 +538,7 @@
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ASD-ZS-a9R">
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marker" translatesAutoresizingMaskIntoConstraints="NO" id="ASD-ZS-a9R">
                                                                             <rect key="frame" x="42.333333333333314" y="0.0" width="24" height="24"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="24" id="95Y-Wj-nyv"/>
@@ -591,7 +591,7 @@
         <!--Navigation Controller-->
         <scene sceneID="rgp-ns-QAC">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M3B-9a-boB" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="RestaurantNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="M3B-9a-boB" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="yJd-d5-kD3">
                         <rect key="frame" x="0.0" y="44" width="375" height="96"/>
@@ -799,7 +799,9 @@
         <image name="home" width="24" height="24"/>
         <image name="home_icon" width="16" height="18.666666030883789"/>
         <image name="location-permission" width="1073" height="968"/>
+        <image name="marker" width="24" height="24"/>
         <image name="menu" width="24" height="24"/>
+        <image name="placeholder" width="343" height="153"/>
         <image name="profile-1" width="24" height="24"/>
         <image name="profile_icon" width="20" height="20"/>
     </resources>
